welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: ')' expected but 'else' found.
	else if ((you>=8) || (date>=8)) {return 2}	
        ^